# slashing

./: Cargo.toml  README.md  package.json  pnpm-lock.yaml
.github/actions/setup/: action.yml
.github/workflows/: main.yml
clients/cli/: Cargo.toml
clients/cli/src/: cli.rs  config.rs  main.rs  output.rs
program/: Cargo.toml
program/src/: address.rs  duplicate_block_proof.rs  error.rs  instruction.rs  lib.rs  processor.rs  shred.rs  sigverify.rs  state.rs
program/tests/: duplicate_block_proof.rs
scripts/: solana.dic
scripts/rust/: audit.mjs
