[package]
name = "solana-slashing-program"
version = "1.0.0"
description = "Solana Program Library Slashing"
authors = ["Anza Maintainers <maintainers@anza.xyz>"]
repository = "https://github.com/solana-program/slashing"
license = "Apache-2.0"
edition = "2021"

[features]
no-entrypoint = []
test-sbf = []

[dependencies]
bitflags = { version = "2.9.1", features = ["serde"] }
bytemuck = { version = "1.23.1", features = ["derive"] }
num_enum = "0.7.4"
bincode = "1.3.3"
num-derive = "0.4"
num-traits = "0.2"
solana-instruction = "2.2.0"
solana-instructions-sysvar = "2.2.0"
solana-program = "2.2.0"
solana-signature = "2.2.0"
serde = "1.0.219" # must match the serde_derive version, see https://github.com/serde-rs/serde/issues/2584#issuecomment-1685252251
serde_bytes = "0.11.17"
serde_derive = "1.0.210" # must match the serde version, see https://github.com/serde-rs/serde/issues/2584#issuecomment-1685252251
serde_with = { version = "3.14.0", default-features = false }
thiserror = "2.0"
spl-pod = "0.5.1"

[dev-dependencies]
lazy_static = "1.5.0"
solana-program-test = "2.3.4"
solana-sdk = "2.2.0"
solana-ledger = "2.2.0"
solana-system-interface = "1"
solana-system-program = "2.2.0"
solana-system-transaction = "2.2.0"
solana-entry = "2.2.0"
solana-client = "2.3.4"
spl-record = "0.3.0"
rand = "0.9.1"

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[lints]
workspace = true
