[package]
name = "solana-slashing-cli"
version = "1.0.0"
description = "Solana Program Library Slashing Command-line Utility"
authors = ["Anza Maintainers <maintainers@anza.xyz>"]
repository = "https://github.com/solana-program/single-pool"
license = "Apache-2.0"
edition = "2021"

[dependencies]
tokio = "1.45"
clap = { version = "3.2.23", features = ["derive"] }
console = "0.15.10"
bincode = "1.3.1"
bytemuck = "1.23.0"
serde = "1.0.217"
serde_derive = "1.0.103"
serde_json = "1.0.138"
serde_with = "3.12.0"
solana-account-decoder = "2.2.0"
solana-clap-v3-utils = "2.2.0"
solana-cli-config = "2.2.0"
solana-cli-output = "2.2.0"
solana-client = "2.2.0"
futures = "0.3.3"
solana-logger = "2.2.0"
solana-ledger = "2.2.0"
solana-system-interface = "1.0.0"
spl-pod = "0.5.0"
solana-remote-wallet = "2.2.0"
solana-sdk = "2.2.1"
solana-transaction-status = "2.2.0"
spl-token = { version = "8.0", features = ["no-entrypoint"] }
lazy_static = "1.4.0"
solana-slashing-program = { version = "1.0.0", path = "../../program", features = [
  "no-entrypoint",
] }
spl-record = "0.3.0"

[dev-dependencies]
solana-test-validator = "2.2.0"
serial_test = "3.2.0"
test-case = "3.3"
tempfile = "3.19.1"

[[bin]]
name = "spl-slashing"
path = "src/main.rs"
